--- a/style.css
+++ b/style.css
@@ -1,6 +1,36 @@
-.header {
-    text-align: center;
+:root {
+    --primary:darksalmon;
+    --secondary: indigo;
+}
+header {
 
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--primary);
+    padding: 30px 10px 30px 0px; 
+    align-items: center;
+
+
+}
+
+header h1 {
+    background-color: var(--secondary);
+    padding: 20px 30px 20px 40px;
+    color: var(--primary);
+}
+
+nav {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+nav a {
+    color: var(--secondary);
+    text-decoration: underline;
+    font-size: 10px;
+    margin: 5px;
 }
 
 .button {
@@ -20,6 +50,9 @@
 }
 
 .section-1 {
+    width: ;
+    margin: ;
+    border: ;
 
 }
 
@@ -33,7 +66,9 @@
 }
 
 .section-2 {
-
+    width: ;
+    margin: ;
+    border: ;
 }
 
 .footer p {
