--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,80 +2,56 @@
     --primary:darksalmon;
     --secondary: indigo;
 }
-header {
 
-    text-align: center;
+header {
     display: flex;
     justify-content: space-between;
     background-color: var(--primary);
-    padding: 30px 10px 30px 0px; 
+    padding: 20px 10px 20px 0px; 
     align-items: center;
-
-
 }
 
 header h1 {
     background-color: var(--secondary);
     padding: 20px 30px 20px 40px;
     color: var(--primary);
+    font-size: 30px;
 }
 
 nav {
     display: flex;
     flex-wrap: wrap;
-
 }
 
 nav a {
     color: var(--secondary);
     text-decoration: underline;
-    font-size: 10px;
-    margin: 5px;
+    font-size: 25px;
+    margin: 30px;
 }
 
-.button {
-    text-align: center;
-}
-
-.nav-1 {
-    text-align: center;
-}
-
-.aside img {
-    text-align: left;
-}
-
-.section {
+section {
     display: flex;
+    justify-content: right;
+    background-image: url(https://d2slcw3kip6qmk.cloudfront.net/marketing/techblog/how-to-plan-a-programming-competition-header@2x.png);
+    padding: 70px 20px 70px 20px;
 }
 
-.section-1 {
-    width: ;
-    margin: ;
-    border: ;
-
+section h2 {
+    background-color: var(--secondary);
+    padding: 10px 15px 10px 20px;
+    color: var(--primary);
+    font-size: 35px;
+       
 }
 
 
-.nav-2 {
-    text-align: center;
-}
 
-.horiseon {
 
-}
 
-.section-2 {
-    width: ;
-    margin: ;
-    border: ;
-}
 
 .footer p {
     text-align: center;
     
 }
 
-.contactlinks {
-    text-align: center;
-}
