--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,9 +32,9 @@ nav a {
 
 section {
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     background-image: url(https://d2slcw3kip6qmk.cloudfront.net/marketing/techblog/how-to-plan-a-programming-competition-header@2x.png);
-    padding: 70px 20px 70px 20px;
+    padding: 100px 20px 20px 20px;
 }
 
 section h2 {
@@ -42,12 +42,40 @@ section h2 {
     padding: 10px 15px 10px 20px;
     color: var(--primary);
     font-size: 35px;
-       
+    margin-right: 30px;   
 }
 
+.part-1  {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px 30px 25px 40px;
+}
 
+aside h3 {
+    min-height: 50px;
+    color: var(--secondary);
+    border-right-style: solid;
+    font-size: 40px;
+padding-right: 20px;
+}
 
+article img {
+    min-height: 25px;
+    overflow: hidden;
+    margin-left: 40px;
+    margin-right: 40px;
+    
+}
 
+article p {
+    min-height: 50px;
+    color: var(--secondary);
+    font-size: 20px;
+    text-align: justify;
+    margin-right: 45px;
+    
+}
 
 
 .footer p {
