--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ figure {
     border-style: solid;
     margin: 10px;
     flex-grow: 1;
-    
+    background-image: cover;
 }
 
 .big-flexbox a {
@@ -218,6 +218,7 @@ content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: auto;
 }
 
 content a {
