--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ aside h3 {
 .about-me-flexbox {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    justify-content: space-around;
 }
 
 article img {
@@ -114,8 +114,8 @@ article p {
     font-size: 20px;
     text-align: justify;
     margin-top: 20px;
-    margin-left: 480px;
-    margin-right: 480px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 /* Flex grow expands a flexbox if area is not fully covered as dimensions are changed */
